src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Neighborhood__c</fullName>
        <formula>Text(Account.Neighborhood__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neighborhood</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Times_To_Extend__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It used to stored extend times to auto close</description>
        <label># of Times To Extend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Related_Venues__c</fullName>
        <label>Number of Related Venues</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operative_Eligible__c</fullName>
        <formula>IF( OR(RFP_Submitted__c = 1, IsClosed)  &amp;&amp;  RecordType.Name = &apos;National&apos; &amp;&amp; NOT( Prevent_Sync__c ) &amp;&amp; Account.Operative_Eligible__c = &apos;Yes&apos;, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <inlineHelpText>An Opportunity is Operative Eligible if it meets the following criteria: 
- Opportunity has an RFP or the Opportunity has been closed
- Record Type = National
- Related Account is Operative Eligible
- Prevent Sync = False (accessible by admins only)</inlineHelpText>
        <label>Operative Eligible</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Expiration_Date__c</fullName>
        <defaultValue>IF($RecordType.Name == &apos;Local&apos;, Today() + 60, null)</defaultValue>
        <description>Used to determine when the Opportunity will expire and the inventory associated to this Opportunity will be released.</description>
        <label>Opportunity Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <description>Phase 1 National</description>
        <externalId>true</externalId>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct to Advertiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Buy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remnant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Sales Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pay_Per_Booking__c</fullName>
        <label>Pay Per Booking</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PotentialValue__c</fullName>
        <description>Phase 1</description>
        <label>Potential Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Value_Direct_Marketing__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Potential Value - Direct Marketing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Value_Direct_Marketing_es__c</fullName>
        <formula>&quot;$&quot; &amp; IF(FIND(&quot;.&quot;, TEXT(Potential_Value_Direct_Marketing__c), 1)&gt;1, TEXT(ROUND(Potential_Value_Direct_Marketing__c ,2)), TEXT(Potential_Value_Direct_Marketing__c) &amp; &quot;.00&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Value - Direct Marketing (es)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Value_Internet__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Potential Value - Internet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Value_Internet_echosign__c</fullName>
        <formula>&quot;$&quot; &amp; IF(FIND(&quot;.&quot;, TEXT(Potential_Value_Internet__c), 1)&gt;1, TEXT(ROUND(Potential_Value_Internet__c ,2)), TEXT(Potential_Value_Internet__c) &amp; &quot;.00&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Value - Internet (echosign)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Value_Print__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Potential Value - Print</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Potential_Value_Print_echosign__c</fullName>
        <formula>&quot;$&quot; &amp; IF(FIND(&quot;.&quot;, TEXT(Potential_Value_Print__c), 1)&gt;1, TEXT(ROUND(Potential_Value_Print__c ,2)), TEXT(Potential_Value_Print__c) &amp; &quot;.00&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Value - Print (echosign)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prevent_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to override Operative Eligible field to False so that it will not sync the Opportunity with Operative.one</inlineHelpText>
        <label>Prevent Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Category__c</fullName>
        <formula>Account.Primary_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Rep_p__c</fullName>
        <label>Primary Rep %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Count__c</fullName>
        <label>Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galleries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Knot Couture Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tentpole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affiliate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Quote_Reminder_Created__c</fullName>
        <inlineHelpText>When we attempt to send a quote to ZBilling and it fails, a reminder will be created once a day to remind the rep to review the Opportunity and Quotes.</inlineHelpText>
        <label>Quote Reminder Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RFP_Submitted__c</fullName>
        <label>RFP Submitted</label>
        <summaryFilterItems>
            <field>ThoughtStarter_RFP__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>RFP</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ThoughtStarter_RFP__c.Submitted_for_Production__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ThoughtStarter_RFP__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReadOnly_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_ID__c</fullName>
        <displayFormat>OPTY-{000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>A system-generated id that uniquely identifies the record</inlineHelpText>
        <label>Reference ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renew_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renew Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Planner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_To_Z_Billing_Triggered_On__c</fullName>
        <inlineHelpText>When an opportunity moves to client approved, this value gets set, triggering the automated z-billing functionality</inlineHelpText>
        <label>Send To Z-Billing Triggered On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Skip_EchoSign_Reason_Code__c</fullName>
        <description>CSP-1818</description>
        <label>Skip EchoSign Reason Code</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manually Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided IO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R/N Signature on File</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SplitRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Phase 1 National</description>
        <label>Split Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Split_Rep_p__c</fullName>
        <formula>1 - Primary_Rep_p__c</formula>
        <label>Split Rep %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Three_Business_Days_From_Today__c</fullName>
        <description>Used in &quot;Send For Signature&quot; validation</description>
        <label>EchoSign Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Potential_Value__c</fullName>
        <formula>Potential_Value_Direct_Marketing__c + Potential_Value_Internet__c + Potential_Value_Print__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Potential Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Potential_Value_echosign__c</fullName>
        <formula>&quot;$&quot; &amp; IF(FIND(&quot;.&quot;, TEXT(Total_Potential_Value__c), 1)&gt;1, TEXT(ROUND(Total_Potential_Value__c ,2)), TEXT(Total_Potential_Value__c) &amp; &quot;.00&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Potential Value (echosign)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <description>Phase 1 National</description>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserTargeting__c</fullName>
        <description>Phase 1 National</description>
        <label>User Targeting</label>
        <picklist>
            <picklistValues>
                <fullName>Geographic Targeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Stage Targeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VenueRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Phase 1</description>
        <label>Concierge</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wedding_Cost__c</fullName>
        <label>Wedding Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Workflow_Local_Sales_market__c</fullName>
        <label>Workflow Local Sales market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XOProperties__c</fullName>
        <description>Phase 1 National</description>
        <label>XO Properties</label>
        <picklist>
            <picklistValues>
                <fullName>The Knot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Bump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Nest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>How He Asked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal Couture Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run of Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Run of Network</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Year_Month_Closed__c</fullName>
        <formula>IF(AND(IsClosed),
    TEXT(YEAR(CloseDate)) &amp; &apos;/&apos; &amp; TEXT(MONTH(CloseDate)),
   &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year/Month Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora_Quote_PDF_Session_Id__c</fullName>
        <description>(CSP-1181) Used to manage the user session id for generating Zuora Quote PDFs</description>
        <inlineHelpText>(CSP-1181) Used to manage the user session id for generating Zuora Quote PDFs</inlineHelpText>
        <label>Zuora Quote PDF Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_count__c</fullName>
        <description>The number of times this record has been assigned via Distribution Engine</description>
        <inlineHelpText>The number of times this record has been assigned via Distribution Engine</inlineHelpText>
        <label>Distribution count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Is_distributed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is distributed to user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_reassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is auto reassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_trigger_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is triggered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Last_distributed__c</fullName>
        <label>Date last distributed to user</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_reassigned__c</fullName>
        <label>Date last auto reassigned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_rejected__c</fullName>
        <description>Date &amp; time that the DE assignment of this opportunity was last rejected</description>
        <inlineHelpText>Date &amp; time that the DE assignment of this opportunity was last rejected</inlineHelpText>
        <label>Last rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zqu__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>zqu__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ZuoraConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zuora Config</label>
        <referenceTo>zqu__ZuoraConfig__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>national</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.National</value>
        </filters>
        <label>national</label>
    </listViews>
    <recordTypes>
        <fullName>Local</fullName>
        <active>true</active>
        <businessProcess>Sales Local</businessProcess>
        <label>Local</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_Closed_Lost</fullName>
        <active>true</active>
        <businessProcess>Sales Local</businessProcess>
        <description>Local - Closed Lost</description>
        <label>Local - Closed Lost</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_Closed_Won</fullName>
        <active>true</active>
        <businessProcess>Sales Local</businessProcess>
        <label>Local - Closed Won</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_Test</fullName>
        <active>true</active>
        <businessProcess>Sales Local</businessProcess>
        <description>CSP-2272 request for QA</description>
        <label>Local - Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>National</fullName>
        <active>true</active>
        <businessProcess>Sales National</businessProcess>
        <description>Phase 1 National</description>
        <label>National</label>
    </recordTypes>
    <recordTypes>
        <fullName>OppConcierge</fullName>
        <active>true</active>
        <businessProcess>Sales Concierge</businessProcess>
        <description>Phase 1</description>
        <label>Opp Concierge</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_is_required</fullName>
        <active>true</active>
        <description>Account is always required</description>
        <errorConditionFormula>ISNULL(AccountId)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Account is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Actual_Close_Date</fullName>
        <active>true</active>
        <description>Actual Close Date can only be changed by system admin</description>
        <errorConditionFormula>ISCHANGED( Actual_Close_Date__c ) &amp;&amp; $Profile.Name = &apos;National Users&apos;</errorConditionFormula>
        <errorDisplayField>Actual_Close_Date__c</errorDisplayField>
        <errorMessage>You do not have permission to change Actual Close Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Agency_Buy_Needs_an_Agency</fullName>
        <active>true</active>
        <description>If Agency Buy is selected for Order Type, an Agency is required</description>
        <errorConditionFormula>NOT(ISPICKVAL(StageName  , &apos;Closed Lost&apos;)) &amp;&amp; ISPICKVAL( Order_Type__c , &apos;Agency Buy&apos;) &amp;&amp;  ISBLANK( Agency__c ) &amp;&amp; RecordType.Name = &apos;National&apos;</errorConditionFormula>
        <errorDisplayField>Agency__c</errorDisplayField>
        <errorMessage>Agency is required if the Opportunity Order Type is Agency Buy</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Can_Not_Edit_Concierge_Opp</fullName>
        <active>false</active>
        <description>Lock Concierge Opp</description>
        <errorConditionFormula>AND
(
RecordType.Name = &apos;Opp Concierge&apos;
/*,$Profile.Name &lt;&gt; &quot;System Administrator&quot;*/
)</errorConditionFormula>
        <errorDisplayField>No_of_Times_To_Extend__c</errorDisplayField>
        <errorMessage>You can not create or edit the Concierge Contract</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Can_not_edit_the_Inventory_Release_Date</fullName>
        <active>true</active>
        <description>The Opportunity Expiration Date can not be updated while the opportunity is in the &quot;Pending Client Approval&quot; and &quot;Client Approved&quot;stage</description>
        <errorConditionFormula>AND($Profile.Name =&apos;Local Core Account Executive&apos;,
ISCHANGED(Opportunity_Expiration_Date__c),OR(ISPICKVAL(StageName, &apos;Pending Client Approval&apos;), ISPICKVAL(StageName, &apos;Client Approved&apos;)))</errorConditionFormula>
        <errorMessage>The Opportunity Expiration Date can not be updated while the opportunity is in the current stage. Please move back to the Quoting stage to adjust this date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_the_Contract_Signer</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,$Profile.Name &lt;&gt; &quot;Service Accounts&quot; , ISCHANGED( Contract_Signer__c ) , OR(ISPICKVAL(StageName , &quot;Pending Client Approval&quot; ) , ISPICKVAL(StageName , &quot;Client Approved&quot; ) , ISPICKVAL(StageName , &quot;Closed Won&quot; )) , RecordType.DeveloperName = &quot;Local&quot;)</errorConditionFormula>
        <errorDisplayField>Contract_Signer__c</errorDisplayField>
        <errorMessage>You can&apos;t modify Contract Signer after quoting!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_Change_Account_Strategist_to_Null</fullName>
        <active>true</active>
        <description>Can not change Account Strategist value to null</description>
        <errorConditionFormula>ISCHANGED(AccStrategist__c) &amp;&amp; ISBLANK(AccStrategist__c)</errorConditionFormula>
        <errorDisplayField>AccStrategist__c</errorDisplayField>
        <errorMessage>You can not change the Account Strategist field to a blank value!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closing_Validation</fullName>
        <active>true</active>
        <description>Validate that an Opportunity is on Verbally Approved before it can select Closing</description>
        <errorConditionFormula>AND(
  ISPICKVAL(StageName, &apos;Closing&apos;),
  OR(
    AND(
      OR(
        TEXT(PRIORVALUE( StageName )) != &apos;Verbally Approved&apos;,
        AND(
          $User.Id !=  AccStrategist__c,
          $Profile.Name != &apos;System Administrator&apos;
        )
      ),
     ISCHANGED(StageName)
    ),
   ISNEW()
 )
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>You can&apos;t select Closing until an Opportunity has been on Verbally Approved.
Only  Account Strategist can move the Opportunity to Closing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_Stages_new_opportunities</fullName>
        <active>false</active>
        <description>requested on SS-6997</description>
        <errorConditionFormula>AND(
ISNEW(),
 OR(   
ISPICKVAL(StageName,&apos;Qualifying&apos;),
ISPICKVAL(StageName,&apos;Developing&apos;),
ISPICKVAL(StageName,&apos;Quoting&apos;),
ISPICKVAL(StageName,&apos;Closing&apos;),
ISPICKVAL(StageName,&apos;Pending Internal Approval&apos;),
ISPICKVAL(StageName,&apos;Ready for Echo-Sign&apos;),
ISPICKVAL(StageName,&apos;Pending Client Approval&apos;),
ISPICKVAL(StageName,&apos;Client Approved&apos;),
ISPICKVAL(StageName,&apos;Closed Won&apos;),
ISPICKVAL(StageName,&apos;Closed Lost&apos;),
ISPICKVAL(StageName,&apos;Calculating TCV&apos;),
ISPICKVAL(StageName,&apos;Customer Declined&apos;),
ISPICKVAL(StageName,&apos;No Customer Response&apos;),
ISPICKVAL(StageName,&apos;Negotiating&apos;),
ISPICKVAL(StageName,&apos;Verbally Approved&apos;)
),

RecordType.DeveloperName = &apos;National&apos;
)</errorConditionFormula>
        <errorMessage>New National Opportunities need to have a Stage of; Prospecting, Value Proposition, or Pitched</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_Stages_new_opportunities_V2</fullName>
        <active>true</active>
        <description>requested on SS-6997</description>
        <errorConditionFormula>AND(
ISNEW(),
AND(   
NOT ISPICKVAL(StageName,&apos;Prospecting&apos;),
NOT ISPICKVAL(StageName,&apos;Value Proposition&apos;),
NOT ISPICKVAL(StageName,&apos;Pitched&apos;)
),

RecordType.DeveloperName = &apos;National&apos;
)</errorConditionFormula>
        <errorMessage>New National Opportunities need to have a Stage of; Prospecting, Value Proposition, or Pitched</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lost_Reason_Details_Required</fullName>
        <active>true</active>
        <description>for ticket CSP-923,</description>
        <errorConditionFormula>AND( 
/* only new opportunities or when they are being closed 
do not throw an error when updating historic records */ 
OR( 
ISNEW(), 
ISCHANGED(StageName) 
), 
/* only closed lost opps */ 
IsClosed, 
NOT(IsWon), 
/* where the Close lost Noteis not filled in */ 
 ISBLANK( Lost_Reason_Details__c ) ,
RecordType.Name = &apos;National&apos;
)</errorConditionFormula>
        <errorDisplayField>Lost_Reason_Details__c</errorDisplayField>
        <errorMessage>A Lost Reason Detail must be filled when an Opportunity is Lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lost_Reason_Required</fullName>
        <active>true</active>
        <description>When marking an Opportunity as Closed Lost, the Lost Reason is required</description>
        <errorConditionFormula>AND(
    /* only new opportunities or when they are being closed
       do not throw an error when updating historic records */
    OR(
       ISNEW(),
       ISCHANGED(StageName)
      ),
    /* only closed lost opps */
    IsClosed, 
    NOT(IsWon), 
    /* where the lost reason is not filled in */
    ISPICKVAL(Lost_Reason__c, &quot;&quot;)
/*,Comment for ticket CSP-923
     RecordType.Name != &apos;National&apos;*/
   )</errorConditionFormula>
        <errorDisplayField>Lost_Reason__c</errorDisplayField>
        <errorMessage>A Lost Reason must be selected when an Opportunity is Lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lost_Reason_not_needed_for_Won_Opps</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
    IsWon, 
    OR(
       NOT(IsPickVal(Lost_Reason__c,&quot;&quot;)),
       NOT(IsBlank(Lost_Reason_Details__c))
      )
    )</errorConditionFormula>
        <errorDisplayField>Lost_Reason__c</errorDisplayField>
        <errorMessage>Do not enter a value for Lost Reason or Lost Reason Details</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_filled_Contract_Signer_beforeQuote</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Or( ISPICKVAL(StageName , &quot;Quoting&quot;), ISPICKVAL(StageName , &quot;Pending for Approval&quot;) , ISPICKVAL(StageName , &quot;Ready for Echo-Sign&quot;)), ISBLANK(Contract_Signer__c ) )</errorConditionFormula>
        <errorDisplayField>Contract_Signer__c</errorDisplayField>
        <errorMessage>Please designate a Contract Signer before you quoting, thanks!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>National_Closed_Won_Stage_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>PRIORVALUE(IsWon) &amp;&amp; isChanged(StageName) &amp;&amp; RecordType.Name = &apos;National&apos;</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>You can&apos;t change the Stage of a National Closed Won opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>National_Opps_Prospecting_Validation</fullName>
        <active>false</active>
        <description>Users can&apos;t select Prospecting for Stage once it has moved past Prospecting</description>
        <errorConditionFormula>ISCHANGED(StageName) &amp;&amp; ISPICKVAL(StageName, &apos;Prospecting&apos;) &amp;&amp; RecordType.Name = &apos;National&apos;</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>You can&apos;t revert the Stage back to Prospecting once it has progressed!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>National_Users_cant_manually_Close_Won</fullName>
        <active>true</active>
        <description>National Users can&apos;t manually mark an Opportunity Closed Won, it must come from Operative.One</description>
        <errorConditionFormula>ISCHANGED( IsWon ) &amp;&amp; IsWon &amp;&amp; $User.Email != &apos;sfdcoperativesvc@xogrp.com&apos; &amp;&amp; RecordType.Name = &apos;National&apos;</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>National Opportunities must be Closed Won by Operative.One integration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Negotiating_Validation</fullName>
        <active>true</active>
        <description>Validate that an Opportunity is on Pitched before it can select Negotiating</description>
        <errorConditionFormula>AND(
  ISPICKVAL(StageName, &apos;Negotiating&apos;),

  OR(
    AND(
     TEXT(PRIORVALUE( StageName )) != &apos;Pitched&apos;,
     ISCHANGED(StageName)
    ),
   ISNEW() 
 )
)</errorConditionFormula>
        <errorDisplayField>StageName</errorDisplayField>
        <errorMessage>You can&apos;t select Negotiating until an Opportunity has been on Pitched</errorMessage>
    </validationRules>
</CustomObject>